[gd_scene format=3 uid="uid://dautccn5psivu"]

[ext_resource type="Script" uid="uid://bmfpvt5djia26" path="res://scripts/skeleton.gd" id="1_yag7t"]
[ext_resource type="Texture2D" uid="uid://dyieqx4igud6j" path="res://sprites/3 - Skeleton/Bone_Toss (32 x 32).png" id="2_4oc3b"]
[ext_resource type="Texture2D" uid="uid://dewdh6i6f2ua5" path="res://sprites/3 - Skeleton/Crumbling_Into_Bone_Pile (32 x 32).png" id="2_fpmxe"]
[ext_resource type="Texture2D" uid="uid://cwmnh0nd6d866" path="res://sprites/3 - Skeleton/Limping_Movement (32 x 32).png" id="3_4oc3b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yag7t"]
size = Vector2(14, 19.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0uhi"]
atlas = ExtResource("2_4oc3b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qgbw"]
atlas = ExtResource("2_4oc3b")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjous"]
atlas = ExtResource("2_4oc3b")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f01p"]
atlas = ExtResource("2_4oc3b")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe8ja"]
atlas = ExtResource("2_4oc3b")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hr2a"]
atlas = ExtResource("2_fpmxe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j31jw"]
atlas = ExtResource("2_fpmxe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx6xw"]
atlas = ExtResource("2_fpmxe")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mssj4"]
atlas = ExtResource("2_fpmxe")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kifd"]
atlas = ExtResource("2_fpmxe")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsvvn"]
atlas = ExtResource("2_fpmxe")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oayfp"]
atlas = ExtResource("2_fpmxe")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qj8h"]
atlas = ExtResource("3_4oc3b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sdy1"]
atlas = ExtResource("3_4oc3b")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu166"]
atlas = ExtResource("3_4oc3b")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lem8q"]
atlas = ExtResource("3_4oc3b")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp68x"]
atlas = ExtResource("3_4oc3b")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckyi2"]
atlas = ExtResource("3_4oc3b")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fpmxe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0uhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qgbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjous")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f01p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe8ja")
}],
"loop": false,
"name": &"attack",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hr2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j31jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx6xw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mssj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kifd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsvvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oayfp")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qj8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sdy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu166")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lem8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp68x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckyi2")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4oc3b"]
radius = 3.0
height = 10.0

[node name="Skeleton" type="CharacterBody2D" unique_id=925847205 groups=["DamageArea"]]
collision_layer = 4
script = ExtResource("1_yag7t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1683165826]
position = Vector2(1, 6.75)
shape = SubResource("RectangleShape2D_yag7t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=916784643]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_fpmxe")
animation = &"walk"
autoplay = "walk"

[node name="HitBox" type="Area2D" parent="." unique_id=1135490506 groups=["Enemies"]]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" unique_id=1118961636]
position = Vector2(2, -6)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_4oc3b")
debug_color = Color(0.9982843, 0, 0.15714613, 0.41960785)

[node name="WallDetector" type="RayCast2D" parent="." unique_id=1087189881]
position = Vector2(0, 11)
target_position = Vector2(15, 0)

[node name="GroundDetector" type="RayCast2D" parent="." unique_id=159075341]
position = Vector2(14, 11)
target_position = Vector2(0, 10)

[node name="PlayerDetector" type="RayCast2D" parent="." unique_id=2000064058]
position = Vector2(0, 12)
target_position = Vector2(59, 0)
collision_mask = 2

[node name="BoneStartPosition" type="Node2D" parent="." unique_id=965758968]
position = Vector2(14, -1)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
